; ModuleID = '/home/carl/AnghaBench/php-src/ext/xmlrpc/extr_xmlrpc-epi-php.c_xmlrpc_type_as_str.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/xmlrpc/extr_xmlrpc-epi-php.c_xmlrpc_type_as_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xmlrpc_vector_none = common dso_local global i64 0, align 8
@XMLRPC_TYPE_COUNT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @xmlrpc_type_as_str(i64 %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8**, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = call i8** (...) @get_type_str_mapping()
  store i8** %7, i8*** %6, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load i64, i64* @xmlrpc_vector_none, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %16

11:                                               ; preds = %2
  %12 = load i8**, i8*** %6, align 8
  %13 = load i64, i64* %4, align 8
  %14 = getelementptr inbounds i8*, i8** %12, i64 %13
  %15 = load i8*, i8** %14, align 8
  store i8* %15, i8** %3, align 8
  br label %23

16:                                               ; preds = %2
  %17 = load i8**, i8*** %6, align 8
  %18 = load i64, i64* @XMLRPC_TYPE_COUNT, align 8
  %19 = load i64, i64* %5, align 8
  %20 = add i64 %18, %19
  %21 = getelementptr inbounds i8*, i8** %17, i64 %20
  %22 = load i8*, i8** %21, align 8
  store i8* %22, i8** %3, align 8
  br label %23

23:                                               ; preds = %16, %11
  %24 = load i8*, i8** %3, align 8
  ret i8* %24
}

declare dso_local i8** @get_type_str_mapping(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
